Kubernetes/infrastructure/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f ./compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
    traefik.enable: "true"
    traefik.http.middlewares.crowdsec.plugin.crowdsec.crowdseclapikey: ""
    traefik.http.middlewares.crowdsec.plugin.crowdsec.enabled: "true"
    traefik.http.middlewares.default-headers.headers.contentTypeNosniff: "true"
    traefik.http.routers.traefik.middlewares: default-headers
    traefik.http.services.traefik.loadbalancer.server.port: "8080"
  labels:
    io.kompose.service: traefik
  name: traefik
  namespace: infrastructure
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: traefik
