Kubernetes/infrastructure/traefik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`watch.{any:.+}`)
      kind: Rule
      observability:
        accessLogs: true
      services:
        - name: jellyfin
          port: 8096
